# projekt

./: .gitlab-ci.yml  Board.cpp  Board.h  CMakeLists.txt  Makefile  README.md  Snake.cpp  Snake.h  SnakeBoard.cpp  SnakeBoard.h  SnakeWindow.cpp  SnakeWindow.h  SnakeWindow.ui  SnakeWindow_ui.py  Snake_qt.pro  main.cpp  moc_SnakeBoard.cpp  moc_SnakeWindow.cpp  octave-workspace  ui_SnakeWindow.h
.github/workflows/: cpp-ci.yml
Snake_qt.app/Contents/: Info.plist
Snake_qt.app/Contents/MacOS/: Snake_qt
include/: my_class.h
src/: my_class.cpp
tests/: my_class_test.cpp
